--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Muhammad Adhwa' Qayyum</h2>
-        <p>I'm a <span class="typed" data-typed-items="Data Analyst, Data Science, Freelancer, Photographer">Photographer</span><span class="typed-cursor typed-cursor--blink"></span></p>
+        <p>I'm <span class="typed" data-typed-items="Data Analyst, Data Scientist, Curious">Photographer</span><span class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
           <a href="https://github.com/AdhwaQayyum?tab=repositories"><i class="bi bi-github"></i></a>
           <!-- <a href="#"><i class="bi bi-facebook"></i></a>
